2005-07-18  Thomas Wood <thos@gnome.org>

	* branded/gnome-branded.xml.in.in:
	* tiles/gnome-tiles.xml.in.in:
	* translucent/gnome-translucent.xml.in.in:

	Added translator comments. Fixes bug 163228

2005-07-07  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Updated for GNOME 2.10.2 release

2005-06-20  Runa Bhattacharjee <runa@bengalinux.org>

        * configure.in: Added "te" (Telegu) to ALL_LINGUAS.

2005-06-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2005-06-04  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "gl" to ALL_LINGUAS.

2005-04-11  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Updated for GNOME 2.10.1 release

2005-04-06  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added "fa" (Persian) to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-23  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ku" to ALL_LINGUAS.

2005-03-08  Baris Cicek <baris@teamforce.name.tr>

	* configure.in: Added "tr" to ALL_LINGUAS.

2005-03-07  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Update for 2.10.0 release

2005-03-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2005-03-05  Rajesh Ranjan <rranjan@redhat.com>

	* configure.in : Added hi to ALL_LINGUAS.

2005-03-03  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2005-03-01  Pawan Chitrakar  <pawan@nplinux.org>

	
	* configure.in: Added "ne" to ALL_LINGUAS.
	
2005-03-01  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ca" "de" "vi" "zh_TW" to ALL_LINGUAS.

2005-03-01  Dan Damian  <dand@gnome.ro>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS.

2005-02-28  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Update for 2.9.92 release

2005-02-26  Ahmad Riza H Nst  <ari@160c.afraid.org>
