@@ -5,7 +5,7 @@
     <!-- Translators: This is the name of a desktop background image that shows blurred rectangles.
          You might want to translate it into the equivalent words of your language  -->
     <_name>Rectangles (Translucent)</_name>
-    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/rects.png</filename>
+    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/rects.svg</filename>
     <options>stretched</options>
     <shade_type>solid</shade_type>
     <pcolor>#76848F</pcolor>
@@ -15,8 +15,8 @@
     <!-- Translators: This is the name of a desktop background image that shows some ellipsis.
          You might want to translate it into the equivalent words of your language  -->
     <_name>Ellipsis (Translucent)</_name>
-    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/ellipsis.png</filename>
-    <options>scaled</options>
+    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/ellipsis.svg</filename>
+    <options>stretched</options>
     <shade_type>solid</shade_type>
     <pcolor>#76848F</pcolor>
     <scolor>#76848F</scolor>
@@ -25,7 +25,7 @@
     <!-- Translators: This is the name of a desktop background image that shows some wavey lines that appear like tentacles.
          You might want to translate it into the equivalent words of your language  -->
     <_name>Tentacles (Translucent)</_name>
-    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/tentacles.png</filename>
+    <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/tentacles.svg</filename>
     <options>stretched</options>
     <shade_type>horizontal-gradient</shade_type>
     <pcolor>#76848F</pcolor>
